2014-04-08  James Pallister  <james.pallister@bristol.ac.uk>
	Add an install-exec-hook to symlink the library into the plugins dir.
	This allows "gcc -fplugin=mageec" to work.

	* gcc_plugin/Makefile.am: Added an install-exec-hook and a uninstall-
	    hook to add and remove symlinks to the mageec gcc plugin
	* gcc_plugin/Makefile.in: Regenerated

2014-04-08  James Pallister  <james.pallister@bristol.ac.uk>
	Make check fix for when not enabling python

	* testsuite/config/site.exp.in: Quote @PYTHON@ so if it is not defined
	    make check does not fail

2014-04-08  James Pallister  <james.pallister@bristol.ac.uk>
	Conditionally enable gcc_plugin tests and python tests based on
	--enable-XXX flags given to configure

	* testsuite/Makefile.am: Added automake conditional declarations for
	    the gcc_plugin and python tests
	* testsuite/Makefile.in: Regenerated

2014-04-07  Simon Cook  <simon.cook@embecosm.com>

	* configure.ac: Make output formatting of enable python and gcc
	more suited to surrounding options.
	* configure: Regenerated.

2014-04-07  Simon Cook  <simon.cook@embecosm.com>

	* gcc_plugin/Makefile.am: Build GCC Plugin only if
	ENABLE_GCC_PLUGIN is set.
	* gcc_plugin/Makefile.in: Regenerated.
	* configure.ac: Add configure flag to disable GCC plugin.
	* configure: Regenerated.

2014-04-07  Simon Cook  <simon.cook@embecosm.com>

	* doc/mageec.texi: Remove references to unknown VERSION, UPDATED.

2014-04-06  Pierre Langlois  <pierre.langlois@embecosm.com>

	* testsuite/gcc_plugin.tests/feature-extract.exp: Use a regular
	expression to match features.

2014-04-06  Simon Cook  <simon.cook@embecosm.com>

	* gcc_plugin/feature-extact.cpp (mageec_featextract_exec): Don't
	print out feature vector manually, use new printing interface.
	* include/mageec/mageec-features.h (mageec_feature): Add description
	member, with getter and constructor to use the new member.
	* mageec/features.cpp (pad_string): Add static string pad function.